Edit README.md and index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,100 @@
 
     </head>
     <body>
+        <div class="container">
+            <div class="partie1">           
+                    <div class="b1">
+                   Morgan Oakley(@morgan) 
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+            <div class="partie2">
+                <ul>
+                   <span><li>Dashboard</li></span><br/><br/><br/>
+                    <li>Home</li><br/>
+                    <li>Profile</li><br/>
+                    <li>Messages</li><br/>
+                    <li>History</li><br/>
+                    <li>Tasks</li><br/><br/>
+                    <li>Settings</li><br/>
+                    <li>Support</li><br/>
+                    <li>Privacy</li>
+                </ul>
 
+            </div>
+            <div class="partie3">
+                <div class="souspartie1">Your projects
+                    <div class="card1">Super Cool projects<br/>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse solicitudin nbn erat,id faciliste
+                        fellis eccumsan nec.
+                    </div>
+                    <div class="card1">Super Cool projects<br/>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse solicitudin nbn erat,id faciliste
+                        fellis eccumsan nec.
+                    </div>
+                    <div class="card1">Super Cool projects<br/>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse solicitudin nbn erat,id faciliste
+                        fellis eccumsan nec.
+                    </div>
+                    <div class="card1">Super Cool projects<br/>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse solicitudin nbn erat,id faciliste
+                        fellis eccumsan nec.
+                    </div>
+                    <div class="card1">Super Cool projects<br/>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse solicitudin nbn erat,id faciliste
+                        fellis eccumsan nec.
+                    </div>
+                    <div class="card1">Super Cool projects<br/>
+                        Sed tempus ut lacus ut scelerisque.
+                        Suspendisse solicitudin nbn erat,id faciliste
+                        fellis eccumsan nec.
+                    </div>
+
+                </div>
+                <div class="souspartie2">Announcements
+                    <div class="card2">Site Maintenance<br/>
+                        Cette partie de la maintenance se compose ainsi.<br/>
+                        Cependant soyez attentif pour le comprendre<br/><br/>
+                        Community Share Day<br/>
+                        cette autre étape s'effectue sur le même principe<br/>
+                        de raisonnement. soyez aussi attentif et ayez du flair<br/><br/>
+                        Updated Privacy Policy<br/>
+                        Ici c'est la partie de la mise à jour<br/>
+                        alors c'est il n'y a que des phrases très courte
+                        et surtout beaucoup plus simple.
+
+
+
+
+                    </div>
+                </div>
+                <div class="souspartie3">Trending
+                    <div class="card3">
+                    <p>@Tenga</p>
+                    <p>@morgan</p>
+                    <p>@Stendal</p>
+                    <p>@Cherif</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+        </div>
+
+
+
+
+
+</body>
+</html>
         
-        </body>
-        </html>
