Edit README.md and index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="partie1">  
                      
                    <div class="b1">
-                    Morgan Oakley(@morgan)  
+                    <span>Morgan Oakley(@morgan)</span>  
                     <button>New</button>
                     <button>Upload</button>
                     <button>Share</button>
